got hacky fix working for elements shifting on load

--- a/less/style.less
+++ b/less/style.less
@@ -22,19 +22,23 @@ html {
     #content {
       * {
         position: absolute;
-        top: 50%;
-        left: 50%;
         text-decoration: none;
         color: inherit;
       }
 
+      .iconlink {
+        transition-duration: .3s;
+      }
+
       .iconlink:hover {
-        
+        -webkit-transform: scale(1.2);
       }
 
       #name {
-        text-align: center;
         font-size: 40px;
+        top: 50%;
+        left: 50%;
+        text-align: center;
         cursor: default;
       }
 
